--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesomeproject",
+  "name": "sub4data",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,16 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@anhnch/react-native-pincode": "^1.2.5",
     "@expo/vector-icons": "^13.0.0",
-    "@haskkor/react-native-pincode": "^1.22.6",
     "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
-    "expo-linear-gradient": "^11.3.0",
     "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
     "install": "^0.13.0",
@@ -28,7 +24,6 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-elements": "^3.4.2",
-    "react-native-linear-gradient": "^2.6.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "yup": "^0.32.11"
