--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-elements": "^3.4.2",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-select-dropdown": "^3.3.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "yup": "^0.32.11"
