--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
@@ -24,18 +25,15 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-elements": "^3.4.2",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-select-dropdown": "^3.3.2",
+    "react-native-stacks": "^1.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "react-native-debugger-open": "^0.3.25"
-  },
-  "resolutions": {
-    "react-devtools-core": "~4.25.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
