--- a/package.json
+++ b/package.json
@@ -9,10 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@gorhom/bottom-sheet": "^4.4.7",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "^2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "axios": "^0.27.2",
     "expo": "~48.0.18",
+    "expo-clipboard": "~4.1.2",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
+    "lodash": "^4.17.21",
+    "npx": "^10.2.2",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.22.0",
+    "react-native-toast-notifications": "^3.3.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.10",
+    "react-native-webview": "^13.2.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
