--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "^13.2.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-contacts": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
